feat: implement safe dataset package updates
